<resources>
    <string name="app_name">VMAP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UTEC Mapa Virtual</string>
    <string name="nav_header_subtitle">Seleccion</string>
    <string name="nav_header_desc">Navegacion</string>
    <string name="action_settings">Ver Informacion</string>

    <string name="menu_home">Mapa</string>
    <string name="login">Logear</string>
    <string name="logout">Desloguear</string>
    <string name="fundadores">Fundadores</string>
    <string name="morazan">Francisco Morazan</string>
    <string name="benito">Benito Juarez</string>
    <string name="simon">Simon Bolivar</string>

    <string name="prompt_email">Carnet</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="login_failed">"Fallo el logueo"</string>
    <string name="profile">Perfil</string>
    <string name="loginmsg">Si logea se identificaran automaticamente\n sus puntos de interes pero no es requerido</string>
    <string name="title_activity_informacion">Informacion</string>
    <string name="search">Buscar</string>
</resources>
