<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/login" />
    </group>

    <item android:title="Edificios">
        <menu>
            <item
                android:id="@+id/nav_fundadores"
                android:title="@string/fundadores" />
            <item
                android:id="@+id/nav_morazan"
                android:title="@string/morazan" />
            <item
                android:id="@+id/nav_benito"
                android:title="@string/benito" />
            <item
                android:id="@+id/nav_simon"
                android:title="@string/simon" />
        </menu>
    </item>

</menu>
